IG-1965 fixed UTs

--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -94,6 +94,7 @@
         },
         "GET_FUNCTIONS": "Oops: Unknown error occurred while retrieving functions",
         "GET_FUNCTIONS_TEMPLATE": "Oops: Unknown error occurred while getting function's templates",
+        "GET_NAMESPACES": "Oops: Unknown error occurred while retrieving namespaces",
         "GET_PROJECT": "Oops: Unknown error occurred while retrieving the project",
         "GET_PROJECTS": "Oops: Unknown error occurred while retrieving projects",
         "INVALID_FILE_TYPE_EXTENSION": "Invalid file type/extension",
@@ -148,6 +149,7 @@
     "MIN": "Min",
     "MOUNT_PATH": "Mount Path",
     "MOUNT_PATH_PARAMS": "Mount Path & Params",
+    "NAMESPACE": "Namespace",
     "NEW_PROJECT": "New project",
     "NO_INTERNET_ACCESS": "No internet access",
     "NO_LOGS_HAVE_BEEN_FOUND": "No logs have been found...",
