--- a/src/i18n/uk/common.json
+++ b/src/i18n/uk/common.json
@@ -333,7 +333,7 @@
     "PRIORITY": "Priority",
     "PROCESS": "Process",
     "PROFILE": "Profile",
-    "PROJECTS": "Projects",
+    "PROJECTS": "Проекти",
     "PROPERTIES": "Properties",
     "PROTECTION": "Protection",
     "QUIT_AND_DISCARD": "Quit and Discard",
