IG-1965 added RESET_ZOOM

--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -351,6 +351,7 @@
     "RESERVED": "Reserved",
     "RESET": "Reset",
     "RESET_PASSWORD": "Reset password",
+    "RESET_ZOOM": "Reset Zoom",
     "RESOURCES": "Resources",
     "RESTART": "Restart",
     "REVOKE": "Revoke",
