--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -1,5 +1,6 @@
 {
     "ACCESS_KEY": "Access key",
+    "ACCESS_KEY_ID": "Access key ID",
     "ACCESS_KEY_V3IO_ONLY": "Access key (V3IO only)",
     "ANNOTATIONS": "Annotations",
     "ATTACH_FILE": "Attach file",
@@ -8,6 +9,7 @@
     "BRANCH": "Branch",
     "BROKERS": "Brokers",
     "BROWSE": "browse",
+    "BUCKET": "Bucket",
     "BUILD": "Build",
     "BUILD_COMMANDS": "Build commands",
     "BUILD_LOG": "Build log",
@@ -137,6 +139,7 @@
     "INGRESSES": "Ingresses",
     "INVOCATION_PER_SEC": "Invocation per sec",
     "INVOCATION_URL": "Invocation URL",
+    "ITEM_KEY": "Item key",
     "JVM_OPTIONS": "JVM options",
     "LABELS": "Labels",
     "LARGE": "Large",
@@ -208,6 +211,7 @@
     "PVC": "PVC",
     "QOS": "QoS",
     "READINESS_TIMEOUT_SECONDS": "Readiness timeout (seconds)",
+    "REGION": "Region",
     "REMOTE_PATH": "Remote path",
     "REPOSITORIES": "Repositories",
     "RESPONSE": "Response",
@@ -222,9 +226,11 @@
     "SCRIPT": "Script",
     "SEC": "Sec",
     "SECRET": "Secret",
+    "SECRET_ACCESS_KEY": "Secret access key",
     "SECRET_KEY": "Secret key",
     "SECRET_NAME": "Secret name",
     "SERVICE_ACCOUNT": "Service Account",
+    "SESSION_TOKEN": "Session token",
     "SMALL": "Small",
     "START_FROM_SCRATCH": "Start from scratch",
     "START_FROM_SCRATCH_DESCRIPTION": "Start with a simple \"hello\" example",
@@ -239,13 +245,19 @@
     "TIMEOUT": "Timeout",
     "TOKEN": "Token",
     "TOOLTIP": {
+        "ANNOTATIONS": "Add metadata to the function",
+        "BASE_IMAGE": "The base image from which the function processor image will be built",
         "CHANGE_TEXT_SIZE": "Change text size",
+        "CONFIG_MAP": "Storing configuration",
         "DISABLE_CACHE": "Build the function's Docker image from scratch without reusing any previously built Docker image layers",
         "FUNCTION_NAME": "Name must be 1-63 characters long, must consist of lower case alphanumeric characters or hyphen, start with an alphabetic character, and end with an alphanumeric character (e.g. 'my-name',  or 'abc-123').",
+        "LABELS": "Used to specify attributes that are meaningful and relevant to users",
         "NEW_TEST": "New test",
         "NO_INTERNET_ACCESS": "Use local Docker images rather than pulling from remote",
         "PER_REPLICA": "Per replica",
+        "READINESS_TIMEOUT_SECONDS": "Number of seconds that the controller will wait for the function to become ready before declaring failure (default: 30)",
         "RUN_FUNCTION": "Run function",
+        "SECRET": "Managing sensitive objects",
         "STOP_FUNCTION": "Stop function",
         "TARGET_CPU": "Exceeding this threshold will increase the number of replicas"
     },
