--- a/src/i18n/en/services.json
+++ b/src/i18n/en/services.json
@@ -27,7 +27,10 @@
     "ERROR_MSG": {
         "GET_SERVICES": "Unknown error occurred while getting services",
         "SERVICES_UPDATING_TASK": "Timed out waiting for the service-configuration update to complete. Refresh the page periodically to see the latest state.",
-        "UPDATE_SERVICES": "Some or all services failed to update"
+        "UPDATE_SERVICES": {
+            "NOT_READY": "Some or all services failed to update",
+            "UNKNOWN": "One or more services returned unknown status after deployment. Please check the logs"
+        }
     },
     "FLAVOR": "Flavor",
     "INCLUDE_HIVE": "Include Hive",
