--- a/src/i18n/en/services.json
+++ b/src/i18n/en/services.json
@@ -1,5 +1,4 @@
 {
-    "ACCESS_USER_DESCRIPTION": "This username is served for Grafana to access the data in Iguazio data container.",
     "AFTER_SERVICE_DEPLOYED_FUNCTIONS_MSG": "After this service is successfully deployed, refresh your screen to see the new \"Functions\" icon on the left navigation menu.",
     "AFTER_SERVICE_DEPLOYED_LOGS_MSG": "After this service is successfully deployed, refresh your screen to see the new \"Logs\" icon on the left navigation menu.",
     "API": "API",
@@ -17,6 +16,7 @@
     "CURRENT": "Current",
     "CUSTOM_PARAMETERS": "Custom Parameters",
     "DATA_ACCESS_USERNAME": "Data-access username",
+    "DATA_ACCESS_USER_DESCRIPTION": "This username is served for Pipelines to access the data in Iguazio data container.",
     "DELETE_RESTART_UPDATE_MSG": "Deleting, restarting or updating a service stops all active jobs for this service.",
     "DELETE_SERVICE_CONFIRM": "Marking the service for deletion will discard the pending configuration changes for this service.",
     "DESCRIPTION_MSG": "A short description of the service instance",
@@ -42,8 +42,8 @@
     "LIMIT_DESCRIPTION": "Setting a limit without setting Request means that Kubernetes will take the entire resources when the service is up.",
     "MORE_ABOUT_RESOURCE_PARAMETERS": "For more information about the resource parameters, see ",
     "MYSQL_CONTAINER_DESCRIPTION": "The name of the data container that contains the MySQL database",
-    "MYSQL_PATH": "MySQL Path",
-    "MYSQL_PATH_DESCRIPTION": "The relative path to an existing MySQL database within the configured container",
+    "MYSQL_DB_PATH": "MySQL DB Path",
+    "MYSQL_DB_PATH_DESCRIPTION": "The relative path to an existing MySQL database within the configured container",
     "NAMES_MUST_BE_UNIQUE": "Names must be unique to the new service \n Must be 1 to 128 characters long",
     "NEW_SERVICE": "New service",
     "NOT_AVAILABLE": "Not available",
@@ -61,6 +61,8 @@
         "SOME_ENV_VAR_VALUE": "Some env var value",
         "WRITE_SERVICE_NAME": "Write service name..."
     },
+    "PLATFORM_DATA_ACCESS_USER": "Platform data-access user",
+    "PLATFORM_DATA_ACCESS_USER_DESCRIPTION": "A user with data access to the platform's data containers. This is required for defining the &quot;iguazio&quot; data source for accessing platform data from Grafana.",
     "PRESTO_KEYS": "Presto keys",
     "REFRESH_SERVICES_CONFIRM": "You have unsaved changes. Refreshing the list will discard your changes.",
     "RESTART_V3IO_MSG": "Restarting the V3IO Daemon service also restarts all dependent services, such as Spark or Presto.",
