--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -245,21 +245,30 @@
     "TIMEOUT": "Timeout",
     "TOKEN": "Token",
     "TOOLTIP": {
-        "ANNOTATIONS": "Add metadata to the function",
-        "BASE_IMAGE": "The base image from which the function processor image will be built",
+        "ACCESS_KEY": "A platform data-access key",
+        "ANNOTATIONS": "for adding function metadata",
+        "BASE_IMAGE": "The URL of the base image from which the function processor image will be built",
+        "BUILD_COMMANDS": "Custom build commands to execute as part of the container-image build",
         "CHANGE_TEXT_SIZE": "Change text size",
-        "CONFIG_MAP": "Storing configuration",
+        "CONFIG_MAP": "for storing configuration artifacts separately from the container image content",
+        "CONFIG_MAP_DEFAULT": "Storing configuration",
+        "CONTAINER_NAME": "The name of the data container that contains the data",
         "DISABLE_CACHE": "Build the function's Docker image from scratch without reusing any previously built Docker image layers",
         "FUNCTION_NAME": "Name must be 1-63 characters long, must consist of lower case alphanumeric characters or hyphen, start with an alphabetic character, and end with an alphanumeric character (e.g. 'my-name',  or 'abc-123').",
-        "LABELS": "Used to specify attributes that are meaningful and relevant to users",
+        "IMAGE_NAME": "The name of the built container image (default: the function name)",
+        "LABELS": "for specifying object attributes that are meaningful and relevant to users",
+        "MOUNT_PATH": "A mount path for referencing the data from the function",
         "NEW_TEST": "New test",
         "NO_INTERNET_ACCESS": "Use local Docker images rather than pulling from remote",
+        "PATH": "A relative directory path within the data container",
         "PER_REPLICA": "Per replica",
-        "READINESS_TIMEOUT_SECONDS": "Number of seconds that the controller will wait for the function to become ready before declaring failure (default: 30)",
+        "READINESS_TIMEOUT_SECONDS": "The time, in seconds, that the controller will wait for the function to become ready before declaring failure",
         "RUN_FUNCTION": "Run function",
-        "SECRET": "Managing sensitive objects",
+        "SECRET": "object for managing sensitive information",
+        "SECRET_DEFAULT": "Managing sensitive objects",
         "STOP_FUNCTION": "Stop function",
-        "TARGET_CPU": "Exceeding this threshold will increase the number of replicas"
+        "TARGET_CPU": "Exceeding this threshold will increase the number of replicas",
+        "V3IO": "A directory in an Iguazio Data Science Platform data container"
     },
     "TOPIC": "Topic",
     "TOPICS": "Topics",
