--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -165,6 +165,7 @@
     "NORMAL": "Normal",
     "NOT_YET_DEPLOYED": "Not yet deployed",
     "ONBUILD_IMAGE": "Onbuild image",
+    "ONBUILD_IMAGE_DESCRIPTION": "The URL of the “onbuild” image from which the function processor image will be built",
     "PATH_DESCRIPTION": "A relative directory path within the data container",
     "PERSISTENT_VOLUME_CLAIM_NAME": "Persistent Volume Claim Name",
     "PLACEHOLDER": {
@@ -218,7 +219,7 @@
     "PVC": "PVC",
     "QOS": "QoS",
     "READINESS_TIMEOUT_SECONDS": "Readiness timeout (seconds)",
-    "READINESS_TIMEOUT_SECONDS_DESCRIPTION": "The time, in seconds, that the controller will wait for the function to become ready before declaring failure",
+    "READINESS_TIMEOUT_SECONDS_DESCRIPTION": "The time, in seconds, that the controller will wait for the function to become ready before declaring failure (default: 60)",
     "REGION": "Region",
     "REMOTE_PATH": "Remote path",
     "REPOSITORIES": "Repositories",
@@ -253,21 +254,32 @@
     "TIMEOUT": "Timeout",
     "TOKEN": "Token",
     "TOOLTIP": {
-        "ANNOTATIONS": "for adding function metadata",
+        "ANNOTATIONS": {
+            "HEAD": "Kubernetes annotations",
+            "REST": "for adding function metadata"
+        },
         "CHANGE_TEXT_SIZE": "Change text size",
-        "CONFIG_MAP": "for storing configuration artifacts separately from the container image content",
-        "CONFIG_MAP_DEFAULT": "Storing configuration",
+        "CONFIG_MAP": {
+            "HEAD": "Kubernetes ConfigMap",
+            "REST": "for storing configuration artifacts separately from the container image content"
+        },
         "DISABLE_CACHE": "Build the function's Docker image from scratch without reusing any previously built Docker image layers",
         "FUNCTION_NAME": "Name must be 1-63 characters long, must consist of lower case alphanumeric characters or hyphen, start with an alphabetic character, and end with an alphanumeric character (e.g. 'my-name',  or 'abc-123').",
-        "LABELS": "for specifying object attributes that are meaningful and relevant to users",
+        "LABELS": {
+            "HEAD": "Kubernetes labels",
+            "REST": "for specifying object attributes that are meaningful and relevant to users"
+        },
         "NEW_TEST": "New test",
         "NO_INTERNET_ACCESS": "Use local Docker images rather than pulling from remote",
         "RUN_FUNCTION": "Run function",
-        "SECRET": "object for managing sensitive information",
-        "SECRET_DEFAULT": "Managing sensitive objects",
+        "SECRET": {
+            "HEAD": "Kubernetes secret",
+            "REST": "object for managing sensitive information"
+        },
         "STOP_FUNCTION": "Stop function",
         "TARGET_CPU": "Exceeding this threshold will increase the number of replicas",
-        "V3IO": "A directory in an Iguazio Data Science Platform data container"
+        "V3IO": "A directory in an Iguazio Data Science Platform data container",
+        "VOLUMES": "Volumes that define data paths and the required information for accessing the data from the function"
     },
     "TOPIC": "Topic",
     "TOPICS": "Topics",
