--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -264,6 +264,7 @@
             "REST": "for storing configuration artifacts separately from the container image content"
         },
         "DISABLE_CACHE": "Build the function's Docker image from scratch without reusing any previously built Docker image layers",
+        "DISABLED_FUNCTION": "Only running functions can be tested",
         "FUNCTION_NAME": "Name must be 1-63 characters long, must consist of lower case alphanumeric characters or hyphen, start with an alphabetic character, and end with an alphanumeric character (e.g. 'my-name',  or 'abc-123').",
         "LABELS": {
             "HEAD": "Kubernetes labels",
