Add new tooltip

--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -426,6 +426,7 @@
         "IMAGE_PREVIEW": "Image preview",
         "INFINITY": "Infinity",
         "LAST_10_MINUTES": "last 10 minutes",
+        "LAST_HOUR": "Last hour",
         "LAST_MONTH": "last month",
         "OPEN_HEADER": "Open header",
         "SORT": "Sort",
