--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -242,6 +242,26 @@
             "REST": "for adding function metadata"
         },
         "CHANGE_TEXT_SIZE": "Change text size",
+        "CONFIGURATION": {
+            "ALPHANUMERIC_CHARACTERS": "Alphanumeric characters",
+            "ANNOTATIONS_KEY": "Annotation keys are composed of an optional prefix and a name, separated by a forward slash (/) — '&lt;key prefix&gt;/&lt;key name&gt;'.",
+            "BEGIN_END_WITH_ALPHANUMERIC": "Must begin and end with alphanumeric characters",
+            "BEGIN_END_WITH_LOWERCASE_ALPHANUMERIC": "Must begin and end with lowercase alphanumeric characters",
+            "EXAMPLES": "Examples",
+            "HYPHENS": "Hyphens",
+            "LABEL_KEY": "Label keys are composed of an optional prefix and a name, separated by a forward slash (/) — '&lt;key prefix&gt;/&lt;key name&gt;'.",
+            "LOWERCASE_ALPHANUMERIC": "Lowercase alphanumeric characters",
+            "MAX_LENGTH": "Max length — {{count}} characters",
+            "NAME_RESTRICTIONS": "Name restrictions",
+            "NOT_CONTAIN_ONLY_PERIOD": "Must not contain only a period",
+            "NOT_END_WITH_DIGIT": "Must not end with a digit (0–9)",
+            "NOT_START_WITH_DIGIT_OR_TWO_PERIODS": "Must not start with a digit (0–9) or with two periods",
+            "PERIODS": "Periods",
+            "PREFIX_RESTRICTIONS": "Prefix restrictions",
+            "RESTRICTIONS": "Restrictions",
+            "UNDERSCORES": "Underscores",
+            "VALID_CHARACTERS": "Valid characters"
+        },
         "CONFIG_MAP": {
             "HEAD": "Kubernetes ConfigMap",
             "REST": "for storing configuration artifacts separately from the container image content"
