--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -52,13 +52,14 @@
     "DELETE_EVENT": "Delete event",
     "DELETE_EVENT_DESCRIPTION": "Deleted event cannot be restored.",
     "DELETE_FUNCTION": "Delete function",
+    "DELETE_FUNCTION_DESCRIPTION": "Deleted function cannot be restored.",
+    "DELETE_FUNCTIONS_CONFIRM": "Are you sure you want to delete selected functions?",
     "DELETE_ITEM": "Delete item?",
     "DELETE_PROJECT": "Delete project",
     "DELETE_PROJECT_DESCRIPTION": "Deleted project cannot be restored.",
     "DELETE_PROJECTS_CONFIRM": "Delete selected projects?",
     "DELETE_VERSION": "Delete version",
-    "DELETE_VERSION_CONFIRM": "Are you sure you want to delete selected version",
-    "DELETED_FUNCTION_DESCRIPTION": "Deleted function cannot be restored.",
+    "DELETE_VERSIONS_CONFIRM": "Are you sure you want to delete selected versions?",
     "DEPENDENCIES": "Dependencies",
     "DEPLOY": "Deploy",
     "DEPLOYING": "Deploying...",
