[Nuclio] Versions columns display incorrect on Projects screen for small browser resolution

--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -29,7 +29,6 @@
     "CONTAINER_NAME": "Container name",
     "CONTAINER_NAME_DESCRIPTION": "The name of the data container that contains the data",
     "CONTENT_TYPE": "Content type",
-    "CREATE_FUNCTION": "Create function",
     "CREATE_FUNCTION_DESCRIPTION": "Choose a preconfigured template as starting point for your nuclio function",
     "CREATE_FUNCTION_EVENT": "Create function event",
     "CREATE_NEW_ANNOTATION": "Create a new annotation",
@@ -45,7 +44,6 @@
     "CREATE_NEW_TOPIC": "Create a new topic",
     "CREATE_NEW_TRIGGER": "Create a new trigger",
     "CREATE_NEW_VOLUME": "Create a new volume",
-    "CREATE_PROJECT": "Create project",
     "CREATED_DATE": "Created date",
     "DATA_BINDINGS": "Data Bindings",
     "DELETE_DESCRIPTION": "Deleted item cannot be restored.",
@@ -137,6 +135,7 @@
     "MOUNT_PATH_DESCRIPTION": "A mount path for referencing the data from the function",
     "MOUNT_PATH_PARAMS": "Mount Path & Params",
     "NAMESPACE": "Namespace",
+    "NEW_FUNCTION": "New function",
     "NEW_PROJECT": "New project",
     "NO_INTERNET_ACCESS": "No internet access",
     "NO_LOGS_HAVE_BEEN_FOUND": "No logs have been found...",
