--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -7,6 +7,8 @@
     "ATTACH_FILE": "Attach file",
     "BASE_IMAGE": "Base image",
     "BASE_IMAGE_DESCRIPTION": "The name of a base container image from which to build the function's processor image",
+    "BEGIN_END_WITH_ALPHANUMERIC": "Must begin and end with alphanumeric characters",
+    "BEGIN_END_WITH_LOWERCASE_ALPHANUMERIC": "Must begin and end with lowercase alphanumeric characters",
     "BODY": "Body",
     "BRANCH": "Branch",
     "BROKERS": "Brokers",
@@ -128,6 +130,7 @@
     "LOGGER_LEVEL": "Logger level",
     "LOGGING": "Logging",
     "MAX": "Max",
+    "MAX_LENGTH_CHARACTERS": "Max length — {{count}} characters",
     "MAX_WORKERS": "Max Workers",
     "METHOD": "Method",
     "MIN": "Min",
@@ -140,6 +143,8 @@
     "NO_INTERNET_ACCESS": "No internet access",
     "NO_LOGS_HAVE_BEEN_FOUND": "No logs have been found...",
     "NORMAL": "Normal",
+    "NOT_START_WITH_DIGIT_OR_TWO_PERIODS": "Must not start with a digit (0–9) or with two periods",
+    "NOT_START_WITH_FORBIDDEN_WORDS": "Must not start with 'kubernetes.io' or 'k8s.io'",
     "NOT_YET_DEPLOYED": "Not yet deployed",
     "ONBUILD_IMAGE": "Onbuild image",
     "ONBUILD_IMAGE_DESCRIPTION": "The name of an \"onbuild\" container image from which to build the function's processor image; the name can include {\\{ .Label }} and {\\{ .Arch }} for formatting",
@@ -260,7 +265,6 @@
         "GPU_LIMIT": "Maximum number of GPUs per replica. Note that while the function is enabled it monopolizes the allocated GPUs even when they're not in use.",
         "IMAGE_NAME": "The name of the function’s container image",
         "PROJECT_FUNCTION_NAME": "Name must be 1-63 characters long, must consist of lower case alphanumeric characters or hyphen, start with an alphabetic character, and end with an alphanumeric character (e.g. 'my-name',  or 'abc-123').",
-        "LABEL": "Label",
         "LABELS": {
             "HEAD": "Kubernetes labels",
             "REST": "for specifying object attributes that are meaningful and relevant to users"
@@ -292,18 +296,10 @@
     },
     "TOPIC": "Topic",
     "TOPICS": "Topics",
+    "UNIQUENESS": "Uniqueness",
     "UNSPECIFIED_FIELD_NAME": "Unspecified field name",
     "V3IO": "V3IO",
-    "VALIDATION": {
-        "ANNOTATIONS_KEY": "Annotation keys are composed of an optional prefix and a name, separated by a forward slash (/) — '&lt;key prefix&gt;/&lt;key name&gt;'.",
-        "BEGIN_END_WITH_ALPHANUMERIC": "Must begin and end with alphanumeric characters",
-        "BEGIN_END_WITH_LOWERCASE_ALPHANUMERIC": "Must begin and end with lowercase alphanumeric characters",
-        "MAX_LENGTH": "Max length — {{count}} characters",
-        "NOT_START_WITH_DIGIT_OR_TWO_PERIODS": "Must not start with a digit (0–9) or with two periods",
-        "NOT_START_WITH_FORBIDDEN_WORDS": "Must not start with 'kubernetes.io' or 'k8s.io'",
-        "UNIQUENESS": "Uniqueness",
-        "VALID_CHARACTERS": "Valid characters"
-    },
+    "VALID_CHARACTERS": "Valid characters",
     "VIEW_YAML": "View YAML",
     "VOLUMES": "Volumes",
     "WELCOME_DESCRIPTION": "Write from scratch or use an example repository to build an event driven application project.",
