--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -243,6 +243,7 @@
     "TIMEOUT": "Timeout",
     "TOKEN": "Token",
     "TOOLTIP": {
+        "ADD_LABELS": "Labels could be set for on function creation only.",
         "ANNOTATION": "Annotation",
         "ANNOTATIONS": {
             "HEAD": "Kubernetes annotations",
