Impl [Nuclio] Resources: add descriptions and tooltips
- Added descriptions to Inactivity Window and Target CPU fields.
- Added tooltip to Inactivity Window field when it is disabled.
- Removed enable/disable checkbox from Target CPU and instead use
  Min and Max Replicas fields to determine this (update tooltip text
  accordingly).
- When Min Replicas is equal to 0, do this to Max Replicas:
  - Make it required.
  - Mark it with a red asterisk.
  - Add a placeholder: "Required when min=0".
- Moved Inactivity Window field to demo mode only

--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -244,6 +244,7 @@
     "IDENTITY": "Identity",
     "IDP": "IdP",
     "INACTIVITY_WINDOW": "Inactivity window",
+    "INACTIVITY_WINDOW_DESCRIPTION": "Idle-time duration before scaling to zero",
     "INFO": "Info",
     "INFO_PANE": "Info pane",
     "INITIALIZATION": "Initialization",
@@ -424,6 +425,7 @@
     "TAGS_NOT_FOUND": "No tag has been found...",
     "TAKE_OFFLINE": "Take offline",
     "TARGET_CPU": "Target CPU",
+    "TARGET_CPU_DESCRIPTION": "Exceeding this threshold will increase the number of replicas",
     "TASKS": "Tasks",
     "TENANT": "Tenant",
     "TENANT_NAME": "Tenant name",
