Impl [Nuclio] Triggers: Worker Availability Timeout: no zero
- Allow empty
- Add more-info description

--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -294,7 +294,8 @@
         "V3IO": "A directory in an Iguazio Data Science Platform data container",
         "V3IO_ACCESS_KEY": "An Iguazio Data Science Platform access key",
         "VOLUMES": "Volumes that define data paths and the required information for accessing the data from the function",
-        "WORK_DIR": "The relative path to the function-code directory within the extracted archive-file directory (default: \"/\" — the root directory)"
+        "WORK_DIR": "The relative path to the function-code directory within the extracted archive-file directory (default: \"/\" — the root directory)",
+        "WORKER_AVAILABILITY_TIMEOUT_MILLISECONDS_DESCRIPTION": "The number of milliseconds to wait for a worker if one is not available.\nEmpty = system default"
     },
     "TOPIC": "Topic",
     "TOPICS": "Topics",
