[Nuclio] Import: skip/override functions with same name (#967)
Move igzMultipleCheckboxes component to this repo from Dashboard repo.

--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -213,6 +213,7 @@
     "READINESS_TIMEOUT_SECONDS_DESCRIPTION": "The time, in seconds, that the controller will wait for the function to become ready before declaring failure (default: {{default}})",
     "REGION": "Region",
     "REMOTE_PATH": "Remote path",
+    "REPLACE": "Replace",
     "REPOSITORIES": "Repositories",
     "RESPONSE": "Response",
     "RESPONSE_HEADERS": "Response headers",
@@ -231,6 +232,7 @@
     "SECRET_NAME": "Secret name",
     "SERVICE_ACCOUNT": "Service Account",
     "SESSION_TOKEN": "Session token",
+    "SKIP": "Skip",
     "SMALL": "Small",
     "SOURCE_CODE": "Source code",
     "START_FROM_SCRATCH": "Start from scratch",
