fixed comments, minor improvements

--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -213,7 +213,6 @@
     "ESCALATION": "Escalation",
     "EVENT_LOG": "Event log",
     "EVENTS": "Events",
-    "EXACTLY_ONE": "Exactly one",
     "EXPONENT_IS_INVALID": "Exponent is invalid",
     "EXPORT": "Export",
     "EXTERNAL": "External",
@@ -293,6 +292,7 @@
     "MORE_ELLIPSIS": "More...",
     "MORE_OPTIONS": "More options",
     "MOVE": "Move",
+    "MUST_CONTAIN_EXACTLY_ONE": "Must contain exactly one",
     "MUST_HAVE_DOT_AFTER_AT": "Must have at least one . after @",
     "N_A": "N/A",
     "NAME": "Name",
@@ -348,10 +348,10 @@
         "ENTER_FIRST_NAME": "Enter first name...",
         "ENTER_PASSWORD": "Enter password...",
         "ENTER_PATH": "Enter path...",
-        "PHONE_EXAMPLE": "+1-561-6532-233",
         "ENTER_URL": "Enter URL...",
         "ENTER_USERNAME": "Enter username...",
         "NETWORK_NAME": "Network name...",
+        "PHONE_EXAMPLE": "+1-561-6532-233",
         "SEARCH": "Search...",
         "SELECT": "Select...",
         "SELECT_CONTAINER": "Select a container...",
