Impl [General] Use validation rules instead of patterns (#989)

--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -21,16 +21,15 @@
     "ARCHIVE": "Archive",
     "ARE_YOU_SURE": "Are you sure?",
     "ARGUMENTS": "Arguments",
-    "ASTERISK_ONLY_AT_START": "No asterisks (*) after first character",
     "AUDIT": "Audit",
     "AUTO": "Auto",
     "BACKUP": "Backup",
     "BANDWIDTH": "Bandwidth",
     "BASIC_SETTINGS": "Basic Settings",
-    "BEGIN_WITH": "Must begin with {{- characters}}",
-    "BEGIN_NOT_WITH": "Must not begin with {{- characters}}",
-    "BEGIN_END_WITH_ALPHANUMERIC": "Must begin and end with alphanumeric characters",
-    "BEGIN_END_WITH_LOWERCASE_ALPHANUMERIC": "Must begin and end with lowercase alphanumeric characters",
+    "BEGIN_END_NOT_WITH": "Must not begin and end with",
+    "BEGIN_END_WITH": "Must begin and end with",
+    "BEGIN_NOT_WITH": "Must not begin with",
+    "BEGIN_WITH": "Must begin with",
     "BRING_ONLINE": "Bring online",
     "BROWSE": "Browse",
     "BY_CONTAINER": "By Container",
@@ -118,8 +117,8 @@
     "ENABLE": "Enable",
     "ENABLED": "Enabled",
     "ENCRYPTION": "Encryption",
-    "END_WITH": "Must end with {{characters}}",
     "END_TIME": "End time",
+    "END_WITH": "Must end with",
     "ENVIRONMENT_VARIABLES": "Environment Variables",
     "ERROR": "Error",
     "ERROR_COLON": "Error: ",
@@ -154,7 +153,6 @@
         "GET_EVENTS_DATA": "Error while getting Events data",
         "IMPORT_PROJECT": "Error occurred while creating a new project.",
         "IMPORT_YAML_FILE": "Corrupted or malformed YAML file selected",
-        "INVALID_INPUT": "The input you provided is invalid or incorrect",
         "INVALID_INPUT_ERROR": "Error: this input is invalid or incorrect, please try again.",
         "INVALID_INPUT_PLEASE_TRY_AGAIN": "The input you provided is invalid or incorrect, please try again.",
         "INVALID_INPUTS": "The inputs you provided are invalid or incorrect",
@@ -215,6 +213,7 @@
     "ESCALATION": "Escalation",
     "EVENT_LOG": "Event log",
     "EVENTS": "Events",
+    "EXPONENT_IS_INVALID": "Exponent is invalid",
     "EXPORT": "Export",
     "EXTERNAL": "External",
     "FAILBACK": "Failback",
@@ -268,6 +267,7 @@
     "LAYER": "Layer",
     "LEAVE": "Leave",
     "LEAVE_PAGE_CONFIRM": "Leaving this page will discard your changes.",
+    "LENGTH": "Length",
     "LIMIT": "Limit",
     "LOADING_CAPITALIZE_ELLIPSIS": "Loading...",
     "LOADING_LOWERCASE_ELLIPSIS": "loading...",
@@ -281,7 +281,9 @@
     "MANAGE": "MANAGE",
     "MARGINAL": "Marginal",
     "MASK": "Mask",
-    "MAX_LENGTH_CHARACTERS": "Max length — {{count}} characters",
+    "MAX_LENGTH_CHARACTERS": "Max length – {{count}} characters",
+    "MAX_LENGTH_DECIMAL_PART": "Max length of the decimal part: {{length}} characters",
+    "MAX_LENGTH_WHOLE_PART": "Max length of the whole part: {{length}} characters",
     "MEMBERS": "Members",
     "MEMORY": "Memory",
     "MIGRATE": "Migrate",
@@ -290,6 +292,8 @@
     "MORE_ELLIPSIS": "More...",
     "MORE_OPTIONS": "More options",
     "MOVE": "Move",
+    "MUST_CONTAIN_EXACTLY_ONE": "Must contain exactly one",
+    "MUST_HAVE_DOT_AFTER_AT": "Must have at least one . after @",
     "N_A": "N/A",
     "NAME": "Name",
     "NAME_IS_REQUIRED": "Name is required",
@@ -300,7 +304,7 @@
     "NEXT_STEP": "next step",
     "NO": "No",
     "NO_ACTIONS": "(No actions)",
-    "NO_CONSECUTIVE_CHARACTER": "No consecutive {{- characters}}",
+    "NO_CONSECUTIVE_CHARACTER": "No consecutive characters",
     "NO_EVENTS": "No events",
     "NO_TASKS": "No {{- currentTab}} tasks",
     "NODE": "Node",
@@ -315,6 +319,8 @@
     "OK": "OK",
     "ON": "ON",
     "ONLINE": "Online",
+    "ONLY_AT_THE_BEGINNING": "Only at the beginning",
+    "ONLY_AT_THE_BEGINNING_AND_EXPONENT": "Only at the beginning and in the exponent",
     "OOPS": "Oops!",
     "OVERRIDE": "Override",
     "OVERRIDE_FUNCTION_CONFIRM": "The function \"{{functionName}}\" already exists in project \"{{projectName}}\", you can either skip its import or override the existing one with the imported one.",
@@ -342,10 +348,10 @@
         "ENTER_FIRST_NAME": "Enter first name...",
         "ENTER_PASSWORD": "Enter password...",
         "ENTER_PATH": "Enter path...",
-        "ENTER_PHONE_NUMBER": "Enter phone number...",
         "ENTER_URL": "Enter URL...",
         "ENTER_USERNAME": "Enter username...",
         "NETWORK_NAME": "Network name...",
+        "PHONE_EXAMPLE": "+1-561-6532-233",
         "SEARCH": "Search...",
         "SELECT": "Select...",
         "SELECT_CONTAINER": "Select a container...",
@@ -409,6 +415,7 @@
     "SNAPSHOT": "Snapshot",
     "SNAPSHOTS": "Snapshots",
     "SOURCE": "Source",
+    "SPACES": "spaces",
     "SPARK": "Spark",
     "STABLE": "Stable",
     "STACKED": "Stacked",
