[Nuclio] Reserved names disallowed for functions & API GWs

--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -301,6 +301,7 @@
     "MUST_CONTAIN_EXACTLY_ONE": "Must contain exactly one",
     "MUST_HAVE_DOT_AFTER_AT": "Must have at least one . after @",
     "MUST_NOT_BE": "Must not be",
+    "MUST_NOT_BE_ONE_OF": "Must not be one of",
     "N_A": "N/A",
     "NAME": "Name",
     "NAME_IS_REQUIRED": "Name is required",
